z-index navbar bug

--- a/src/index.css
+++ b/src/index.css
@@ -106,7 +106,7 @@ code {
   border-bottom: 1px solid rgba(255, 255, 255, 0.037);
 
   /*Sticky Navbar*/
-
+  z-index: 1;
   position: -webkit-sticky;
   position: sticky;
   top: 0;
